Fix spacing issue

--- a/src/widgets/dropdown/index.styl
+++ b/src/widgets/dropdown/index.styl
@@ -9,7 +9,7 @@
 
 .dropdown
 	position relative
-	
+
 	&__toggle
 		&:not(.-disabled)
 			cursor pointer
@@ -58,27 +58,27 @@
 		text-align left
 		background-color var(--sleek-surface-background-color)
 		box-shadow 0 0.25rem 0.5rem var(--sleek-shadow-color-3)
-		
+
 		&.-right
 			right 0
 			left auto
-		
+
 		&.-scroll
 			overflow-y auto
 			-webkit-overflow-scrolling touch
-	
+
 		.dropdown__search
 			padding 0.5rem
-		
+
 		.dropdown__menu
 			top 0
 			left 100%
-	
+
 	&__item
 		padding 0.5rem 1rem
 		color var(--sleek-text-default-color)
 		transition background-color $fast ease-in
-		
+
 		&.-link
 			text-decoration none
 
@@ -86,11 +86,11 @@
 			&:focus
 				text-decoration none
 				color var(--sleek-text-default-color)
-		
+
 		&.-drop
 			position relative
 			padding-right 3rem
-			
+
 			&::after
 				content ''
 				position absolute
@@ -107,11 +107,14 @@
 		&.-active
 			position relative
 			box-shadow inset 0.5rem 0 0 -0.25rem $blue
-		
+
 		&.-disabled
 			opacity 0.75
 			cursor not-allowed
-			
+
+		.icon + .text
+			margin-left 0.25rem
+
 		.badge
 			float right
 			margin-left 2rem
@@ -141,7 +144,7 @@
 		&:first-child,
 		&:last-child
 			display none
-	
+
 	&__icon
 		&.-left
 			margin-right 0.5rem
@@ -160,11 +163,11 @@
 
 	.-open > .dropdown__toggle
 		background-color var(--sleek-dropdown-item-hover-background-color)
-		
+
 	&.-notifications
 		.dropdown__menu
 			width 300px
-	
+
 	&.-select
 		.dropdown__toggle
 			position relative
@@ -174,19 +177,19 @@
 
 			input[type=radio]
 				display none
-			
+
 			input[type=radio] + *
 				display none
-			
+
 			input[type=radio]:checked + *
 				display block
-		
+
 		.dropdown__menu
 			width 100%
 
 			label
 				cursor pointer
-			
+
 		select
 			display none
 
@@ -198,7 +201,7 @@
 				&:hover,
 				&:focus
 					background-color var(--sleek-dropdown-item-hover-background-color)
-			
+
 
 	&.-readonly
 		.dropdown__item
